# ros_scenario_simulation

./: .gitignore  .gitmodules  README.md
reports/: menu.js  report.html  report.js  scenario.js  style.css
src/commonroad_evaluator/: CMakeLists.txt  package.xml
src/commonroad_evaluator/launch/: evaluator.launch
src/commonroad_goal/: CMakeLists.txt  package.xml
src/commonroad_goal/include/commonroad/: types.hpp
src/commonroad_goal/launch/: commonroad_goal.launch
src/commonroad_goal/src/: OpenDrive.cpp  commonroad_goal_node.cpp
src/commonroad_goal/src/parser/: CommonRoadParser.cpp
src/commonroad_helper/: CMakeLists.txt  package.xml
src/commonroad_helper/include/commonroad/: CommonRoad.hpp  types.hpp
src/commonroad_helper/src/: CommonRoad.cpp
src/commonroad_objects/: CMakeLists.txt  LICENSE  Readme.md  package.xml
src/commonroad_objects/include/commonroad/: types.hpp
src/commonroad_objects/launch/: commonroad_objects.launch
src/commonroad_objects/src/: commonroad_objects_node.cpp
src/commonroad_objects/src/parser/: CommonRoadParser.cpp  pugixml.cpp
src/commonroad_sim/: CMakeLists.txt  package.xml
src/commonroad_sim/config/: params.yaml
src/commonroad_sim/include/commonroad/: types.hpp
src/commonroad_sim/launch/: commonroad_sim.launch
src/commonroad_sim/src/: commonroad_sim_node.cpp
src/open_scenario_helper/: CMakeLists.txt  package.xml
src/open_scenario_helper/include/: openScenarioHelper.hpp
src/open_scenario_helper/include/commonroad/: types.hpp
src/open_scenario_helper/src/: openScenarioHelper.cpp
src/scenario_evaluator/: CMakeLists.txt  package.xml
src/scenario_evaluator/launch/: evaluator.launch
src/scenario_evaluator/scripts/: evaluator.py  reportGenerator.py
src/scenario_goal/: CMakeLists.txt  package.xml
src/scenario_goal/launch/: scenario_goal.launch
src/scenario_goal/src/: scenario_goal_node.cpp
src/scenario_objects/: CMakeLists.txt  package.xml
src/scenario_objects/launch/: kf_tracker.launch  scenario_objects.launch
src/scenario_objects/src/: scenario_objects_node.cpp
src/scenario_sim/: CMakeLists.txt  package.xml
src/scenario_sim/config/: commonroad.rviz  op_viz.rviz
src/scenario_sim/launch/: ci_driving.launch  mission_planning.launch  mission_planning_freespace.launch  motion_planning.launch  scenario_sim.launch
src/scenario_sim/src/: scenario_sim_node.cpp
src/sim_resources/map/: MCubeTestMap.xodr  campus-hsa.xodr  test_track_v01.xodr
src/sim_resources/scenarios/: IntersectionRightTurn.xosc  IntersectionRightTurnTrafficLeft.xosc  IntersectionRightTurnTrafficLeft_1.xosc  IntersectionRightTurnTrafficLeft_2.xosc  IntersectionRightTurnTrafficLeft_3.xosc  IntersectionRightTurnTrafficLeft_4.xosc  IntersectionRightTurnTrafficLeft_5.xosc  IntersectionStraight.xosc  MCube_IntersectionLeft.xosc  MCube_IntersectionRight.xosc  MCube_RoundaboutTestInnerLong.xosc  MCube_RoundaboutTestInnerShort.xosc  MCube_VehicleAheadRoundabout.xosc  MCube_VehicleAheadStraight.xosc  MCube_VehicleAheadStraightStop.xosc  OpenSCENARIO.xsd  OvertakeObsacleStandingStraight.xosc  RoadPartiallyBlocked.xosc  StraigtDrivingWithApproachingVehicleNoConflict.xosc  UAS_Augsburg_CampusBrunnenlech.xosc  UAS_Augsburg_CampusBrunnenlech_0.xosc  UAS_Augsburg_CampusBrunnenlech_1.xosc  UAS_Augsburg_CampusBrunnenlech_2.xosc  UAS_Augsburg_CampusBrunnenlech_signalized_obstacle.xml  UAS_Augsburg_CampusBrunnenlech_signalized_parallel_parked.xml
src/sim_resources/scenarios/MCube/: MCube_IntersectionStraightSN.xosc  MCube_IntersectionStraightWE.xosc  MCube_RoundaboutTestInnerLongParkedRight.xosc  MCube_RoundaboutTestInnerShortParkedRight.xosc  MCube_RoundaboutTestOuter.xosc  MCube_VehicleAheadIntersection.xosc  MCube_VehiclesParkedRight.xosc
src/sim_resources/scenarios/Test_Track/: IntersectionRightTurnWithLeader.xosc  RoadFullyBlocked.xosc  TightCornerDrive_one.xosc
src/sim_resources/scenarios/temp/: IntersectionLeftTurn.xosc  NormalCornerDrive.xosc  SimpleFollowing.xosc  TightCornerDrive.xosc
src/sim_run/: CMakeLists.txt  package.xml
src/sim_run/launch/: run.launch
src/sim_run/scripts/: sim_run.py
src/sim_start/: CMakeLists.txt  package.xml
src/sim_start/launch/: sim.launch
src/sim_start/src/: sim_start_node.cpp
src/tf_broadcaster/: CMakeLists.txt  ReadMe.md  package.xml
src/tf_broadcaster/src/: tf_broadcaster_node.cpp  tf_broadcaster_node.hpp
