<?xml version="1.0"?>
<package format="2">
  <name>commonroad_helper</name>
  <version>0.0.0</version>
  <description>commonroad scneario helper integration</description>

  <maintainer email="mathias.pechinger@hs-augsburg.de">ros</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
